hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_result.php.exp
File "lambda_bad_as_result.php", line 29, characters 13-26:
No method `missing_method` in `MyClass` (Typing[4053])
  File "lambda_bad_as_result.php", line 5, characters 19-23:
  Did you mean `hello` instead?
  File "lambda_bad_as_result.php", line 26, characters 39-45:
  This is why I think it is an object of type MyClass
  File "lambda_bad_as_result.php", line 26, characters 39-45:
  This type argument to `MyClosureRunner` only allows supertypes (it is contravariant)
  File "lambda_bad_as_result.php", line 4, characters 7-13:
  Declaration of `MyClass` is here
